--- a/package.json
+++ b/package.json
@@ -4,13 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    {
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  }
+     "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  
   },
   "keywords": [],
   "author": "",
@@ -22,3 +18,4 @@
     "mongoose": "^8.11.0"
   }
 }
+
