--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-     "dev": "nodemon server.js",
+    "dev": "nodemon server.js",  // Use for local development
+    "start": "node server.js",   // Use for production (deployment)
     "test": "echo \"Error: no test specified\" && exit 1"
-  
   },
   "keywords": [],
   "author": "",
@@ -18,4 +18,5 @@
     "mongoose": "^8.11.0"
   }
 }
+
 
