--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js",  // Use for local development
-    "start": "node server.js",   // Use for production (deployment)
+    "dev": "nodemon server.js", 
+    "start": "node server.js",   
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
